main/default/objects/Archival_Log__b/Archival_Log__b.object-meta.xml
<CustomObject>
    <label>Archival Log</label>
    <pluralLabel>Archival Logs</pluralLabel>
</CustomObject>