main/default/objects/Archival_Log__b/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>