main/default/objects/Archival_Log__b/fields/Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Id__c</fullName>
    <label>Log Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>